Add production IAM auth boundary (#20)
* Add production auth boundary


* Fix auth review blockers


---------
